WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248879
Properly resolve fullscreen API promises
https://bugs.webkit.org/show_bug.cgi?id=248879
Summary
Properly resolve fullscreen API promises
Tim Nguyen (:ntim)
Reported
2022-12-07 08:06:01 PST
exitFullscreen() promises should resolve in FullscreenManager::finishExitFullscreen(). requestFullscreen() promises should resolve in FullscreenManager::willEnterFullscreen(). These methods FullscreenManager are called asynchronously, so it might be tricky however.
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2022-12-07 08:21:10 PST
rdar://103074395
Tim Nguyen (:ntim)
Comment 2
2022-12-09 15:16:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7415
EWS
Comment 3
2022-12-09 20:03:55 PST
Committed
257668@main
(9696329f7af6): <
https://commits.webkit.org/257668@main
> Reviewed commits have been landed. Closing PR #7415 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4
2022-12-10 10:12:52 PST
I'm pretty sure this is causing 4-5 layout test crashes on EWS runs now.
David Kilzer (:ddkilzer)
Comment 5
2022-12-12 10:30:41 PST
(In reply to David Kilzer (:ddkilzer) from
comment #4
)
> I'm pretty sure this is causing 4-5 layout test crashes on EWS runs now.
Specific examples: PR: <
https://github.com/WebKit/WebKit/pull/7430
> Run: <
https://ews-build.webkit.org/#/builders/73/builds/21968
> Results: <
https://ews-build.s3-us-west-2.amazonaws.com/macOS-BigSur-Release-WK1-Tests-EWS/c887a3c0-21968/results.html
> Crashing tests: fullscreen/full-screen-request-removed.html media/modern-media-controls/layout-node/addChild.html media/modern-media-controls/placard-support/placard-support-airplay-fullscreen.html media/modern-media-controls/seek-forward-support/seek-forward-support.html PR: <
https://github.com/WebKit/WebKit/pull/7428
> Run: <
https://ews-build.webkit.org/#/builders/73/builds/21964
> Results: <
https://ews-build.s3-us-west-2.amazonaws.com/macOS-BigSur-Release-WK1-Tests-EWS/37345d6b-21964/results.html
> Crashing tests: fullscreen/full-screen-request-removed.html crash log sample history media/modern-media-controls/media-controls/media-controls-display-above-captions.html media/modern-media-controls/mute-button/mute-button.html media/modern-media-controls/placard-support/placard-support-airplay-fullscreen.html media/modern-media-controls/start-support/start-support-audio.html pageoverlay/overlay-large-document-scrolled.html These seem to be fixed as of Monday morning, though.
Tim Nguyen (:ntim)
Comment 6
2022-12-12 10:57:08 PST
Crashes were fixed by
https://github.com/WebKit/WebKit/pull/7443
Karl Dubost
Comment 7
2024-11-13 17:13:49 PST
***
Bug 282998
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug